[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = [
    "json",
    "cookies",
] }

[dependencies]
async-trait = "0.1.78"
axum = { version = "0.7.4", features = ["json", "tokio", "macros"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
email_address = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
